chore(security): remove client seeding and defaults; avoid hardcoded OAuth clients and secrets in code and config; use env variables/migrations instead